# live555_android_client

./: settings.gradle
SeetaCodec/: build.gradle
SeetaCodec/src/main/: AndroidManifest.xml
SeetaCodec/src/main/java/com/example/nativecodec/: NativeCodec.java
SeetaCodec/src/main/java/com/seetatech/sdk/rtsp/: RtspClient.java
SeetaCodec/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  NativeCodecProxy.cpp  RtspClientJni.cpp  RtspClientProxy.cpp  com_seetatech_sdk_rtsp_RtspClient.h  looper.cpp
SeetaCodec/src/main/jni/include/: NativeCodecProxy.h  RtspClientCallback.h  RtspClientProxy.h  log.h  looper.h
SeetaCodec/src/main/jni/live555/BasicUsageEnvironment/: BasicUsageEnvironment0.cpp
SeetaCodec/src/main/jni/live555/groupsock/: Groupsock.cpp  GroupsockHelper.cpp  NetInterface.cpp
SeetaCodec/src/main/jni/live555/include/liveMedia/include/: MediaTranscodingTable.hh  MultiFramedRTPSource.hh
SeetaCodec/src/main/jni/live555/liveMedia/: AVIFileSink.cpp  H263plusVideoStreamParser.cpp  MatroskaFile.cpp  MatroskaFileParser.cpp  MediaSession.cpp  MultiFramedRTPSink.cpp  MultiFramedRTPSource.cpp  ProxyServerMediaSession.cpp  QuickTimeFileSink.cpp  RTSPClient.cpp
SeetaCodec/src/main/jni/live555/liveMedia/include/: MultiFramedRTPSink.hh
SeetaCodec/src/main/res/layout/: main.xml
app/: build.gradle
app/src/androidTest/java/com/zzq/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zzq/myapplication/: MainActivity.java
app/src/test/java/com/zzq/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
